--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: Covid Statistics
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,6 +27,9 @@ dependencies:
   dio: ^3.0.9
   provider: ^4.0.5
   intl: ^0.16.1
+  google_maps_flutter: ^0.5.26
+  sliding_up_panel: ^1.0.2
+  charts_flutter: ^0.9.0
 
 dev_dependencies:
   flutter_test:
