--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   google_maps_flutter: ^0.5.26
   sliding_up_panel: ^1.0.2
   charts_flutter: ^0.9.0
+  auto_size_text: ^2.1.0
+  connectivity: ^0.4.8+2
 
 dev_dependencies:
   flutter_test:
