--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.project.covidapp">
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -8,8 +9,8 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="covidapp"
-        android:icon="@mipmap/ic_launcher">
+        android:label="COVID-PH"
+        android:icon="@mipmap/cv_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDD-t_LSwOeUdRCmkOeeSTpFprAOgDT5no"/>
 
